--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/phaser/2.4.4/phaser.min.js" charset="utf-8"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/phaser/2.4.4/custom/phaser-arcade-physics.min.js" charset="utf-8"></script>
+
+    <script src="/game/index.js" charset="utf-8"></script>
 </head>
 <body>
     <script>
