Working on scores functionality

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -6,6 +6,8 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/phaser/2.4.4/phaser.min.js" charset="utf-8"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/phaser/2.4.4/custom/phaser-arcade-physics.min.js" charset="utf-8"></script>
     <script src="/game/index.js" charset="utf-8"></script>
+    <script src="/scores.js" charset="utf-8"></script>
+
     <link rel="stylesheet" href="/game/style.css">
 </head>
 <body>
