adding title screen

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="/game/style.css">
 </head>
 <body>
+    <h3>MAGIC POTION</h3>
     <script>
         var csrf = '{{token}}'
     </script>
